# MyTodoApp

./: .gitignore  Cargo.toml  readme.md  事故清单1.md
backend/: Cargo.toml  todo.md  项目结构.md  项目结构.txt
backend/src/: db.rs  main.rs  utils.rs
backend/src/db/: db_sub_team.rs  db_sub_team_member.rs  db_task.rs  db_team.rs  db_user.rs  db_user_log.rs  migrations.rs  pool.rs
backend/src/db/back/: db_task_back.rs  db_team_back.rs  db_user_back.rs
backend/src/handlers/: mod.rs  task_handler.rs  user_handler.rs
backend/src/models/: task_log.rs  team.rs  team_log.rs  user.rs  user_log.rs
backend/src/routes/: mod.rs  task_routes.rs  user_routes.rs
backend/src/services/: task_service.rs  user_service.rs
backend/src/utils/: hash_pawsswd.rs  id_generator.rs  log.rs  utils_passwd.rs  validator.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/api/: auth.rs  client.rs  error.rs  mod.rs  task.rs  team.rs  user.rs
frontend/src/components/: button.rs  card.rs  form.rs  input.rs  loading.rs  mod.rs  modal.rs  search.rs  task_card.rs  task_form.rs
frontend/src/pages/: dashboard.rs  login.rs  mod.rs  not_found.rs  protected_route.rs  register.rs  settings.rs  tasks.rs  teams.rs
frontend/src/store/: mod.rs  task_store.rs  team_store.rs  theme_store.rs  user_store.rs
frontend/src/styles/: global.css
logs/: app.log.2026-04-03
