[workspace]
members = [
    "backend",
    "frontend",
]

resolver = "2"

[workspace.dependencies]
futures-util = "0.3.32"
salvo = { version = "0.89.2", features = ["websocket","oapi","logging","test"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.50.0"
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# 前端依赖
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.17", features = ["csr"] }
leptos_router = "0.8.12"

# ferroid = "1.0.2"
sonyflake = "0.4.0"
# nulid = "0.10.1"
chrono = "0.4.44"

# 数据库
sqlx = "0.8.6"
# 密码加密
argon2 = "0.5.3"
# 错误处理库    
# thiserror = "2.0.18"
anyhow = "1.0.102"
# indexeddb
# idb = "0.6.5"

regex-lite = "0.1"
# 日志
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }