[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
salvo = { workspace = true, features = ["websocket","oapi"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sonyflake = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
