[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = {workspace = true}
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlElement", "Storage", "Window", "EventTarget"] }
js-sys = "0.3"
gloo-net = "0.6"
gloo-utils = "0.2"
